sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:12: error: type mismatch;
 found   : Boolean
 required: Int
    if(pos=0==true){
            ^AlgGnomeSort:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if(pos=0==true){
          ^